# Flask-SQLAlchemy-CRUD

./: app.py  db.sqlite3  pyproject.toml
