[tool.poetry]
name = "traversy-flask-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["My Name <me@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
